[regression] Xserver 1.20.9 crashes on reexecuting gnome-shell
This is a regression in 1.20.9 and downgrading to 1.20.8 fixes it. when I alt-f2 -> r, in gnome-shell after switching users, Xorg crashes
Thread 1 (Thread 0x7f3e733fd940 (LWP 34561)):
#0 0x00007f3e73d6dcc5 in raise () at /usr/lib/libc.so.6
#1 0x00007f3e73d57362 in abort () at /usr/lib/libc.so.6
#2 0x000055b0b3722c0a in OsAbort () at ../xserver/os/utils.c:1351
#3 0x000055b0b3726451 in AbortServer () at ../xserver/os/log.c:879
args = {{gp_offset = 24, fp_offset = 48, overflow_arg_area = 0x7ffe6e2d0ba0, reg_save_area = 0x7ffe6e2d0ad0}}
args2 = {{gp_offset = 8, fp_offset = 48, overflow_arg_area = 0x7ffe6e2d0ba0, reg_save_area = 0x7ffe6e2d0ad0}}
beenhere = 1
#4 FatalError (f=f@entry=0x55b0b384ef08 "Caught signal %d (%s). Server aborting\n") at ../xserver/os/log.c:1017
args = {{gp_offset = 24, fp_offset = 48, overflow_arg_area = 0x7ffe6e2d0ba0, reg_save_area = 0x7ffe6e2d0ad0}}
args2 = {{gp_offset = 8, fp_offset = 48, overflow_arg_area = 0x7ffe6e2d0ba0, reg_save_area = 0x7ffe6e2d0ad0}}
beenhere = 1
#5 0x000055b0b3729c72 in OsSigHandler (unused=<optimized out>, sip=0x7ffe6e2d0cf0, signo=11) at ../xserver/os/osinit.c:156
#6 OsSigHandler (signo=11, sip=0x7ffe6e2d0cf0, unused=<optimized out>) at ../xserver/os/osinit.c:110
#7 0x00007f3e73d6dd50 in <signal handler called> () at /usr/lib/libc.so.6
#8 ChangeToCursor (pDev=0x55b0b3d346e0, cursor=0x55b0b4205fb0) at ../xserver/dix/events.c:926
pSprite = 0x55b0b3d5dbe0
pScreen = <optimized out>
#9 0x000055b0b37ee1b5 in ActivatePointerGrab (mouse=0x55b0b3d346e0, grab=0x55b0b4090170, time=..., autoGrab=<optimized out>) at ../xserver/dix/events.c:1546
grabinfo = 0x55b0b3d34730
oldgrab = 0x0
oldWin = <optimized out>
isPassive = 0
#10 0x000055b0b37e550c in GrabDevice (client=0x55b0b3970fc0, dev=0x55b0b3d346e0, pointer_mode=1, keyboard_mode=1, grabWindow=<optimized out>, ownerEvents=<optimized out>, ctime=1608134, mask=0x7ffe6e2d13b0, grabtype=3, curs=0, confineToWin=0, status=0x7ffe6e2d13af "") at ../xserver/dix/events.c:5126
tempGrab = <optimized out>
pWin = 0x55b0b3f08320
confineTo = 0x0
grab = <optimized out>
time = {months = <optimized out>, milliseconds = <optimized out>}
access_mode = <optimized out>
rc = 0
grabInfo = 0x55b0b3d34730
cursor = 0x0
#11 0x000055b0b376477a in ProcXIGrabDevice (client=0x55b0b3970fc0) at ../xserver/Xi/xigrabdev.c:110
dev = 0x55b0b3d346e0
rep = {repType = 0 '\000', RepType = 20 '\024', sequenceNumber = 28205, length = 32766, status = 84 'T', pad0 = 236 '\354', pad1 = 45950, pad2 = 21936, pad3 = 0, pad4 = 0, pad5 = 983280640, pad6 = 369485568}
ret = <optimized out>
status = 0 '\000'
mask = {core = 3020488528, xi = 3020488528, xi2mask = 0x55b0b408ff50}
keyboard_mode = 1
pointer_mode = 1
stuff = <optimized out>
#12 0x000055b0b36b9078 in Dispatch () at ../xserver/dix/dispatch.c:478
result = <optimized out>
client = 0x55b0b3970fc0
start_tick = 825
i = <optimized out>
alwaysCheckForInput = {0, 1}
#13 dix_main (envp=<optimized out>, argv=0x7ffe6e2d1578, argc=17) at ../xserver/dix/main.c:276
i = <optimized out>
alwaysCheckForInput = {0, 1}
#14 main (argc=17, argv=0x7ffe6e2d1578, envp=<optimized out>) at ../xserver/dix/stubmain.c:34
Edited by Hussam Al-Tayeb